# Synapse_OS

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CLAUDE.md  NEXT.md  PRIMER.md  README.md  ROADMAP.md  SHOWCASE.md  package.json  pnpm-lock.yaml
apps/api/: .env.example  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_production_workflow_outbox.py
apps/api/src/app/: __init__.py  main.py
apps/api/src/app/api/v1/: router.py
apps/api/src/app/api/v1/endpoints/: __init__.py  agent_tools.py  agents.py  boards.py  dashboard.py  evaluations.py  event_utils.py  events.py  handovers.py  health.py  (+5 more)
apps/api/src/app/core/: __init__.py  auth.py  config.py
apps/api/src/app/db/: __init__.py  base.py  session.py
apps/api/src/app/mcp/: __init__.py  server.py
apps/api/src/app/models/: __init__.py  base.py  entities.py  enums.py
apps/api/src/app/schemas/: __init__.py  agent.py  common.py  evaluation.py  handover.py  memory.py  project.py  task.py  worklog.py
apps/api/src/app/services/: __init__.py  agent_toolkit.py  evaluation.py  event_stream.py  idempotency.py  memory.py  policies.py  repository.py  workflow.py
apps/api/src/app/vector/: __init__.py  qdrant_store.py
apps/api/src/app/workers/: __init__.py  outbox_worker.py
apps/api/tests/: conftest.py  test_agent_tooling.py  test_auth_strict.py  test_policies.py  test_production_flow.py  test_read_endpoints.py  test_schemas.py
apps/tester/: pyproject.toml
apps/tester/src/tester/: __init__.py  agents.py  config.py  models.py  run.py  runtime.py
(+108 files in other folders)
